# fastant

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: criterion.rs
src/: instant.rs  lib.rs  tsc_now.rs
