[package]
name = "fastant"
version = "0.1.9"
edition = "2021"
license = "MIT"
description = "A drop-in replacement for `std::time::Instant` that measures time with high performance and high accuracy powered by Time Stamp Counter (TSC)."
homepage = "https://github.com/fast/fastant"
repository = "https://github.com/fast/fastant"
documentation = "https://docs.rs/fastant"
readme = "README.md"
keywords = ["TSC", "clock", "rdtsc", "timing", "nanosecond"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ctor = "0.2"
coarsetime = { version = "0.1", optional = true }
web-time = "1.0"

[features]
atomic = []
fallback-coarse = ["coarsetime"]

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = [
  "plotters",
  "cargo_bench_support",
] }
quanta = "0.12"
rand = "0.8"
wasm-bindgen-test = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[[bench]]
name = "criterion"
harness = false
